--- a/eat.Rmd
+++ b/eat.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Eating Out"
-author: "your name here"
+author: "Davy D"
 output: 
   html_document:
     number_sections: true
@@ -14,7 +14,11 @@ date: "`r Sys.Date()`"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## There were two years in which the General Social Survey asked about the frequency of eating out. The variable name you are looking for is "eatout".
+## There were two years in which the General Social Survey asked about the frequency of eating out.
+
+The variable name you are looking for is "eatout".
+
+
 ### Find those years and for the first year the question was asked download that years data in a stata format - its name will be "GSSxxxx.dta" where the xxxx is replaced by the year.  For example if the year was 1983 its name would be GSS1983.dta. Your assignment is to download the GSS yearly dataset for the first year the question was asked and then  write up the answer to the question by editing the  code block in line 31 to eval=TRUE and finish the job. 
 
 $H_0$ There is no difference among the various races with frequency of eating out  
@@ -27,9 +31,11 @@ require(tidyverse)
 require(tigerstats)
 require(knitr)
 require(foreign)
+require (haven)
 ```
+
 ```{r, eval=FALSE}
-GSS <-read.dta(file="GSSxxxx.dta")
+GSS <-read_dta(file="GSS1996.dta")
 GSS <- droplevels(GSS)
 mydata <- select(GSS,race,age,eatout)
 mydata <- na.omit(mydata)
